Some changes for windows env #SYNCOPE-526
git-svn-id: https://svn.apache.org/repos/asf/syncope/trunk@1607847 13f79535-47bb-0310-9956-ffa450edef68